update test for view models